feat: add migration support, version parameter, and E2E tests
Combine two independent features that together enable contract migration:

- Version parameter: `validator mpfCage(_version: Int)` gives each
  validator version a distinct script hash/policy ID.
- Migration support: `Migrating` redeemer allows minting with a
  carried-over (non-empty) MPF root by atomically burning the old token.

Add Docker-based E2E test suite using Yaci DevKit and Lucid Evolution
that verifies migration works on a local testnet:
- Mint and end on a single version
- Full migration from version 0 to version 1

All 49 aiken unit tests pass (37 cage + 12 lib).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,34 @@ jobs:
 
       - name: Run aiken tests
         run: nix develop --command aiken check
+
+      - name: Upload plutus.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: plutus-json
+          path: result
+
+  e2e:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download plutus.json
+        uses: actions/download-artifact@v4
+        with:
+          name: plutus-json
+
+      - name: Prepare plutus.json
+        run: |
+          # The artifact is the blueprint file itself (named "result" from nix symlink)
+          # Rename to plutus.json for the docker-compose mount
+          if [ -f result ]; then mv result plutus.json; fi
+          ls -la plutus.json
+
+      - name: Run E2E tests
+        run: docker compose -f e2e/docker-compose.yml up --build --abort-on-container-exit test-runner
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f e2e/docker-compose.yml down -v
